Problem Set 8 (Questions)

--- a/PSets/psets.tex
+++ b/PSets/psets.tex
@@ -44,6 +44,9 @@
 \subfile{PSet7/pset7.tex}
 \newpage
 
+\subfile{PSet8/pset8.tex}
+\newpage
+
 \renewcommand{\leftmark}{References}
 \printbibliography[heading=bibintoc]
 
