Final Exam (Questions and Answers)

--- a/PSets/psets.tex
+++ b/PSets/psets.tex
@@ -47,6 +47,12 @@
 \subfile{PSet8/pset8.tex}
 \newpage
 
+\renewcommand{\leftmark}{Final}
+\setenumerate[1]{label={\textbf{\arabic*.}}}
+\setenumerate[2]{label={\arabic*.}}
+\subfile{Final/final.tex}
+\newpage
+
 \renewcommand{\leftmark}{References}
 \printbibliography[heading=bibintoc]
 
