winter break 2023 edits

--- a/Notes/Week1/week1.tex
+++ b/Notes/Week1/week1.tex
@@ -516,7 +516,7 @@
     \begin{itemize}
         \item Preview: Adding equivalence classes by their representatives is a special case of a more general construction (that of a \textbf{quotient}).
         \item We should be familiar with manipulating equivalence classes from studying $\Q$ rigorously.
-        \item We should be familiar with modular arithmetic from timekeeping: 8 hours after 5:00 AM? Must be 13h00, but $13\equiv 1\pmod 12$ so 1:00 PM.
+        \item We should be familiar with modular arithmetic from timekeeping: 8 hours after 5:00 AM? Must be 13h00, but $13\equiv 1\pmod{12}$ so 1:00 PM.
         \item We do need to be able to think of equivalence classes as elements that can be manipulated in their own right. But it is important to remember that these \emph{are} still equivalence classes at the end of the day.
         \item Useful application of modular arithmetic: Computing the last two digits of $2^{1000}$ using the integers modulo 100.
     \end{itemize}
