--- a/Notes/Week3/week3.tex
+++ b/Notes/Week3/week3.tex
@@ -292,7 +292,7 @@
     \begin{itemize}
         \item Calegari: Intuition is borne of experience. You get intuition from grubby computations, and then you finally recognize the structure. If you don't know what's going on, it's good to struggle. Start with the simplest possible example and then struggle until you develop intuition.
     \end{itemize}
-    \item Last time, we discussed the fact that there is no surjective homomorphism from $S_5\to S_4$, but there is a surjective homomoprhism from $S_4\to S_3$. How about the case $S_{n+1}\to S_n$ for arbitrary $n$?
+    \item Last time, we discussed the fact that there is no surjective homomorphism from $S_5\to S_4$, but there is a surjective homomorphism from $S_4\to S_3$. How about the case $S_{n+1}\to S_n$ for arbitrary $n$?
     \item Teaser theorem: Let $n>m$ and $\phi:S_n\twoheadrightarrow S_m$. Then
     \begin{enumerate}
         \item $m=1$.
